assets/responselistandmanage/responselistandmanage.css
.grid-view-loading{opacity:0.2;}

.grid-view th strong{display:block}
.grid-view th small{display:block}
.grid-view .table th > .sort-link {font-weight:normal}
.grid-view .table th  {font-weight:normal}
.grid-view .data-column{min-width:12rem;max-width:12rem;}
.grid-view .column-yes-no{min-width:6rem}
.grid-view .column-id{min-width:4rem}
.grid-view .column-completed{min-width:4rem}

.grid-view tbody td{max-height:1.4em;}
.grid-view {position:relative;}
.grid-view > .row-fluid{position:relative;}
.grid-view > .row{
    position: fixed;
    bottom: 0;
    width: 100%;
    background:#fff;
}
.grid-view .tools-form form,.grid-view .tools-form .dropup{display:inline-block}
.tools-form .btn .caret {margin-left: 0.2em;}
.grid-view .table-condensed{margin-bottom:0.5em}
.grid-view .pager,.grid-view .pagination{margin:0.5em 0}
.grid-view .summary{padding:0.5em 0}
.grid-view .table > thead > tr > th{vertical-align: top;}
.grid-view .table tbody td .answer-value{height:1.4em;overflow:hidden;text-overflow: ellipsis;cursor: zoom-in;}

.grid-view th small{white-space: nowrap;overflow:hidden;max-width:12rem;
text-overflow: ellipsis;}
.grid-view .popover{width:auto;min-width:12rem;max-width:36em;}
.grid-view .popover-content{white-space: pre-line;}

.grid-view .column-upload-files .popover{min-width:25rem}
.grid-view .file-list
{
margin: 0;
padding: 0;
width: 12em;
}

.grid-view .file-list dt
{
    float: left;
    clear: left;
    width: 12rem;
    font-weight: normal;
}

.grid-view .file-list dd
{
    margin: 0 0 0 12rem;
    padding: 0 0.5rem;
    border-left: 1px solid #CCC;
}
/*
.grid-view a.update,.grid-view a.delete{opacity:0.3}
.grid-view a.update:not([href]),.grid-view a.delete[href]{opacity:initial}
*/
/* Disable totally display of button without href: else strange javascript action */
.grid-view a:not([href]){display:none}
.grid-view .bootstrap-datetimepicker-widget a:not([href]){display:inline} /* but show this inside datetimepicker */

#modal-survey-update{width:100%;}
#modal-survey-update iframe{border:0 none;width:100%;height:100%}
#modal-survey-update .modal-body
{
  height:auto;
  width:auto;
  max-height:100%;
  box-sizing:border-box;
  overflow-y:show;
  overflow-x:show;
  padding:0;
}
#modal-survey-update .modal-footer{margin-top:0}
#modal-survey-update .modal-dialog{width:100%;margin: 0 auto;}

.btn-link:focus, .btn-link:hover {
    color: inherit;
}
#responses-grid tfoot{display: table-header-group;}
#responses-grid tfoot{font-weight:bold}
.grid-view tfoot td{text-align:center}
.grid-view tfoot .button-column{text-align:right}
/* For wisywig editor */
.wysihtml5-toolbar .btn{

}

